--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,11 +2,13 @@ click==8.1.3
 colorama==0.4.6
 Cython==0.29.28
 Flask==2.2.2
+Flask-Cors==3.0.10
 gensim==4.2.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
-numpy==1.22.3
-scipy==1.8.0
-smart-open==6.0.0
+numpy==1.23.4
+scipy==1.9.3
+six==1.16.0
+smart-open==6.2.0
 Werkzeug==2.2.2
