--- a/webserver/package.json
+++ b/webserver/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "nanoid": "^3.3.4",
     "socket.io": "^4.5.3"
   }
 }
