--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,6 +2,10 @@ FROM python:3.10.1
 
 WORKDIR /app
 
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
+
+RUN python -m pip install --upgrade pip
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
@@ -9,4 +13,4 @@ EXPOSE 5000
 
 COPY . .
 
-CMD ["python3", "-m", "flask", "run"]
+CMD ["python3", "-m", "gunicorn", "--bind", "0.0.0.0:5000", "wsgi:app"]
