--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,6 +4,7 @@ Cython==0.29.28
 Flask==2.2.2
 Flask-Cors==3.0.10
 gensim==4.2.0
+gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
