chore: add word2vec model

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
+ENV GENSIM_DATA_DIR /app/data/gensim
 
 RUN python -m pip install --upgrade pip
 COPY requirements.txt requirements.txt
@@ -11,6 +12,7 @@ RUN pip install -r requirements.txt
 
 EXPOSE 5000
 
+COPY ./data/gensim data/gensim
 COPY . .
 
 CMD ["python3", "-m", "gunicorn", "--bind", "0.0.0.0:5000", "wsgi:app"]
